--- a/index.html
+++ b/index.html
@@ -1,1 +1,413 @@
-<html>tt</html>
+<!DOCTYPE html>
+<html lang="th">
+<head>
+  <link rel="canonical" href="https://dragonball-th.github.io/" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Dragon Ball ดราก้อนบอล (ภาคเด็ก) ตอนที่ 1-153 พากย์ไทย</title>
+  <link rel="icon" href="https://img2.pic.in.th/pic/039b1c3dd878efaf74.png" type="image/png" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+    body {
+      margin: 0;
+      font-family: 'Kanit', sans-serif;
+      background: #141414;
+      color: #fff;
+    }
+    header {
+      background-color: #ff3d00;
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    .logo {
+      font-size: 1.8rem;
+      font-weight: bold;
+      color: white;
+      text-decoration: none;
+    }
+    nav {
+      display: flex;
+      gap: 10px;
+    }
+    nav a {
+      padding: 6px 12px;
+      background-color: transparent;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1rem;
+      transition: color 0.3s;
+    }
+    nav a:hover {
+      color: #ffccbc;
+    }
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+    .menu-toggle span {
+      width: 25px;
+      height: 3px;
+      background: white;
+      margin: 4px 0;
+      border-radius: 2px;
+    }
+    
+@media(max-width: 600px) {
+  nav {
+    display: none;
+    flex-direction: column;
+    background-color: #ff3d00;
+    position: absolute;
+    top: 60px;
+    right: 10px;
+    width: 200px;
+    z-index: 100;
+    border-radius: 8px;
+    padding: 10px;
+    align-items: flex-start;
+  }
+  nav.active {
+    display: flex;
+  }
+  nav a {
+    padding: 10px;
+    text-align: left;
+  }
+  .menu-toggle {
+    display: flex;
+  }
+}
+nav.active {
+        display: flex;
+      }
+      .menu-toggle {
+        display: flex;
+      }
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 20px 15px;
+    }
+
+    .anime-img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 16px;
+      display: block;
+      margin: 0 auto 20px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+      transition: transform 0.3s ease;
+    }
+    .anime-img:hover {
+      transform: scale(1.03);
+    }
+
+    .anime-title {
+      font-size: 2rem;
+      text-align: center;
+      color: #ff7043;
+      margin-bottom: 10px;
+    }
+
+    .anime-desc {
+      max-width: 800px;
+      margin: 0 auto 40px;
+      text-align: center;
+      line-height: 1.6;
+      color: #ddd;
+      font-size: 1rem;
+    }
+
+    h2 {
+      color: #ffa07a;
+      text-align: center;
+      margin: 40px 0 20px;
+    }
+
+    .episode-list {
+      list-style: none;
+      padding: 0;
+      max-width: 600px;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+      gap: 10px;
+    }
+
+    .episode-list li a {
+      display: block;
+      background-color: #222;
+      color: #ffa07a;
+      padding: 10px 15px;
+      border-radius: 8px;
+      text-align: center;
+      font-weight: bold;
+      text-decoration: none;
+      transition: background 0.2s, transform 0.2s;
+    }
+
+    .episode-list li a:hover {
+      background-color: #333;
+      transform: translateY(-2px);
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #1f1f1f;
+      color: #ccc;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <a href="https://anime-bk.com" class="logo">ANIME BK</a>
+
+  <div class="menu-toggle" id="menuToggle" aria-label="Toggle menu" role="button" tabindex="0">
+    <span></span><span></span><span></span>
+  </div>
+  <nav id="navMenu" role="navigation">
+    <a href="https://anime-bk.com/">หน้าแรก</a>
+    <a href="https://anime-bk.com/thai">อนิเมะพากย์ไทย</a>
+    <a href="https://anime-bk.com/sub">อนิเมะซับไทย</a>
+    <a href="https://anime-bk.com/chinese">อนิเมะจีน</a>
+    <a href="https://anime-bk.com/themovie">เดอะมูฟวี่</a>
+    <a href="https://anime-bk.com/contact">ติดต่อแจ้งปัญหา</a>
+  </nav>
+</header>
+
+<div class="container">
+  <h1 class="anime-title">Dragon Ball ดราก้อนบอล (ภาคเด็ก) ตอนที่ 1-153 พากย์ไทย</h1>
+  <img alt="Dragon Ball ดราก้อนบอล (ภาคเด็ก)" class="anime-img" src="https://img2.pic.in.th/pic/Dragon-Ball-1986_11zon.jpg"/>
+  <p class="anime-desc">
+    เรื่องราวเกี่ยวกับการผจญภัยของ ซุน โกคู ในการรวบรวมดราก้อนบอลทั้งเจ็ดลูก เพื่อขอพรจากเทพเจ้ามังกร โดยระหว่างการเดินทาง โกคูได้พบกับเพื่อนและศัตรูมากมาย และต้องเผชิญหน้ากับอุปสรรคต่างๆ ที่ทดสอบความสามารถและพลังของเขา 
+  
+  
+  </p>
+  <h2>รายการตอน Dragon Ball</h2>
+  <ul class="episode-list">
+
+
+
+
+
+
+<li><a href="Dragon-Ball-ep153">ตอนที่ 153</a></li>
+<li><a href="Dragon-Ball-ep152">ตอนที่ 152</a></li>
+<li><a href="Dragon-Ball-ep151">ตอนที่ 151</a></li>
+<li><a href="Dragon-Ball-ep150">ตอนที่ 150</a></li>
+<li><a href="Dragon-Ball-ep149">ตอนที่ 149</a></li>
+<li><a href="Dragon-Ball-ep148">ตอนที่ 148</a></li>
+<li><a href="Dragon-Ball-ep147">ตอนที่ 147</a></li>
+<li><a href="Dragon-Ball-ep146">ตอนที่ 146</a></li>
+<li><a href="Dragon-Ball-ep145">ตอนที่ 145</a></li>
+<li><a href="Dragon-Ball-ep144">ตอนที่ 144</a></li>
+<li><a href="Dragon-Ball-ep143">ตอนที่ 143</a></li>
+<li><a href="Dragon-Ball-ep142">ตอนที่ 142</a></li>
+<li><a href="Dragon-Ball-ep141">ตอนที่ 141</a></li>
+<li><a href="Dragon-Ball-ep140">ตอนที่ 140</a></li>
+<li><a href="Dragon-Ball-ep139">ตอนที่ 139</a></li>
+<li><a href="Dragon-Ball-ep138">ตอนที่ 138</a></li>
+<li><a href="Dragon-Ball-ep137">ตอนที่ 137</a></li>
+<li><a href="Dragon-Ball-ep136">ตอนที่ 136</a></li>
+<li><a href="Dragon-Ball-ep135">ตอนที่ 135</a></li>
+<li><a href="Dragon-Ball-ep134">ตอนที่ 134</a></li>
+<li><a href="Dragon-Ball-ep133">ตอนที่ 133</a></li>
+<li><a href="Dragon-Ball-ep132">ตอนที่ 132</a></li>
+<li><a href="Dragon-Ball-ep131">ตอนที่ 131</a></li>
+<li><a href="Dragon-Ball-ep130">ตอนที่ 130</a></li>
+<li><a href="Dragon-Ball-ep129">ตอนที่ 129</a></li>
+<li><a href="Dragon-Ball-ep128">ตอนที่ 128</a></li>
+<li><a href="Dragon-Ball-ep127">ตอนที่ 127</a></li>
+<li><a href="Dragon-Ball-ep126">ตอนที่ 126</a></li>
+<li><a href="Dragon-Ball-ep125">ตอนที่ 125</a></li>
+<li><a href="Dragon-Ball-ep124">ตอนที่ 124</a></li>
+<li><a href="Dragon-Ball-ep123">ตอนที่ 123</a></li>
+<li><a href="Dragon-Ball-ep122">ตอนที่ 122</a></li>
+<li><a href="Dragon-Ball-ep121">ตอนที่ 121</a></li>
+<li><a href="Dragon-Ball-ep120">ตอนที่ 120</a></li>
+<li><a href="Dragon-Ball-ep119">ตอนที่ 119</a></li>
+<li><a href="Dragon-Ball-ep118">ตอนที่ 118</a></li>
+<li><a href="Dragon-Ball-ep117">ตอนที่ 117</a></li>
+<li><a href="Dragon-Ball-ep116">ตอนที่ 116</a></li>
+<li><a href="Dragon-Ball-ep115">ตอนที่ 115</a></li>
+<li><a href="Dragon-Ball-ep114">ตอนที่ 114</a></li>
+<li><a href="Dragon-Ball-ep113">ตอนที่ 113</a></li>
+<li><a href="Dragon-Ball-ep112">ตอนที่ 112</a></li>
+<li><a href="Dragon-Ball-ep111">ตอนที่ 111</a></li>
+<li><a href="Dragon-Ball-ep110">ตอนที่ 110</a></li>
+<li><a href="Dragon-Ball-ep109">ตอนที่ 109</a></li>
+<li><a href="Dragon-Ball-ep108">ตอนที่ 108</a></li>
+<li><a href="Dragon-Ball-ep107">ตอนที่ 107</a></li>
+<li><a href="Dragon-Ball-ep106">ตอนที่ 106</a></li>
+<li><a href="Dragon-Ball-ep105">ตอนที่ 105</a></li>
+<li><a href="Dragon-Ball-ep104">ตอนที่ 104</a></li>
+<li><a href="Dragon-Ball-ep103">ตอนที่ 103</a></li>
+<li><a href="Dragon-Ball-ep102">ตอนที่ 102</a></li>
+<li><a href="Dragon-Ball-ep101">ตอนที่ 101</a></li>
+<li><a href="Dragon-Ball-ep100">ตอนที่ 100</a></li>
+<li><a href="Dragon-Ball-ep99">ตอนที่ 99</a></li>
+<li><a href="Dragon-Ball-ep98">ตอนที่ 98</a></li>
+<li><a href="Dragon-Ball-ep97">ตอนที่ 97</a></li>
+<li><a href="Dragon-Ball-ep96">ตอนที่ 96</a></li>
+<li><a href="Dragon-Ball-ep95">ตอนที่ 95</a></li>
+<li><a href="Dragon-Ball-ep94">ตอนที่ 94</a></li>
+<li><a href="Dragon-Ball-ep93">ตอนที่ 93</a></li>
+<li><a href="Dragon-Ball-ep92">ตอนที่ 92</a></li>
+<li><a href="Dragon-Ball-ep91">ตอนที่ 91</a></li>
+<li><a href="Dragon-Ball-ep90">ตอนที่ 90</a></li>
+<li><a href="Dragon-Ball-ep89">ตอนที่ 89</a></li>
+<li><a href="Dragon-Ball-ep88">ตอนที่ 88</a></li>
+<li><a href="Dragon-Ball-ep87">ตอนที่ 87</a></li>
+<li><a href="Dragon-Ball-ep86">ตอนที่ 86</a></li>
+<li><a href="Dragon-Ball-ep85">ตอนที่ 85</a></li>
+<li><a href="Dragon-Ball-ep84">ตอนที่ 84</a></li>
+<li><a href="Dragon-Ball-ep83">ตอนที่ 83</a></li>
+<li><a href="Dragon-Ball-ep82">ตอนที่ 82</a></li>
+<li><a href="Dragon-Ball-ep81">ตอนที่ 81</a></li>
+<li><a href="Dragon-Ball-ep80">ตอนที่ 80</a></li>
+<li><a href="Dragon-Ball-ep79">ตอนที่ 79</a></li>
+<li><a href="Dragon-Ball-ep78">ตอนที่ 78</a></li>
+<li><a href="Dragon-Ball-ep77">ตอนที่ 77</a></li>
+<li><a href="Dragon-Ball-ep76">ตอนที่ 76</a></li>
+<li><a href="Dragon-Ball-ep75">ตอนที่ 75</a></li>
+<li><a href="Dragon-Ball-ep74">ตอนที่ 74</a></li>
+<li><a href="Dragon-Ball-ep73">ตอนที่ 73</a></li>
+<li><a href="Dragon-Ball-ep72">ตอนที่ 72</a></li>
+<li><a href="Dragon-Ball-ep71">ตอนที่ 71</a></li>
+<li><a href="Dragon-Ball-ep70">ตอนที่ 70</a></li>
+<li><a href="Dragon-Ball-ep69">ตอนที่ 69</a></li>
+<li><a href="Dragon-Ball-ep68">ตอนที่ 68</a></li>
+<li><a href="Dragon-Ball-ep67">ตอนที่ 67</a></li>
+<li><a href="Dragon-Ball-ep66">ตอนที่ 66</a></li>
+<li><a href="Dragon-Ball-ep65">ตอนที่ 65</a></li>
+<li><a href="Dragon-Ball-ep64">ตอนที่ 64</a></li>
+<li><a href="Dragon-Ball-ep63">ตอนที่ 63</a></li>
+<li><a href="Dragon-Ball-ep62">ตอนที่ 62</a></li>
+<li><a href="Dragon-Ball-ep61">ตอนที่ 61</a></li>
+<li><a href="Dragon-Ball-ep60">ตอนที่ 60</a></li>
+<li><a href="Dragon-Ball-ep59">ตอนที่ 59</a></li>
+<li><a href="Dragon-Ball-ep58">ตอนที่ 58</a></li>
+<li><a href="Dragon-Ball-ep57">ตอนที่ 57</a></li>
+<li><a href="Dragon-Ball-ep56">ตอนที่ 56</a></li>
+<li><a href="Dragon-Ball-ep55">ตอนที่ 55</a></li>
+<li><a href="Dragon-Ball-ep54">ตอนที่ 54</a></li>
+<li><a href="Dragon-Ball-ep53">ตอนที่ 53</a></li>
+<li><a href="Dragon-Ball-ep52">ตอนที่ 52</a></li>
+<li><a href="Dragon-Ball-ep51">ตอนที่ 51</a></li>
+<li><a href="Dragon-Ball-ep50">ตอนที่ 50</a></li>
+<li><a href="Dragon-Ball-ep49">ตอนที่ 49</a></li>
+<li><a href="Dragon-Ball-ep48">ตอนที่ 48</a></li>
+<li><a href="Dragon-Ball-ep47">ตอนที่ 47</a></li>
+<li><a href="Dragon-Ball-ep46">ตอนที่ 46</a></li>
+<li><a href="Dragon-Ball-ep45">ตอนที่ 45</a></li>
+<li><a href="Dragon-Ball-ep44">ตอนที่ 44</a></li>
+<li><a href="Dragon-Ball-ep43">ตอนที่ 43</a></li>
+<li><a href="Dragon-Ball-ep42">ตอนที่ 42</a></li>
+<li><a href="Dragon-Ball-ep41">ตอนที่ 41</a></li>
+<li><a href="Dragon-Ball-ep40">ตอนที่ 40</a></li>
+<li><a href="Dragon-Ball-ep39">ตอนที่ 39</a></li>
+<li><a href="Dragon-Ball-ep38">ตอนที่ 38</a></li>
+<li><a href="Dragon-Ball-ep37">ตอนที่ 37</a></li>
+<li><a href="Dragon-Ball-ep36">ตอนที่ 36</a></li>
+<li><a href="Dragon-Ball-ep35">ตอนที่ 35</a></li>
+<li><a href="Dragon-Ball-ep34">ตอนที่ 34</a></li>
+<li><a href="Dragon-Ball-ep33">ตอนที่ 33</a></li>
+<li><a href="Dragon-Ball-ep32">ตอนที่ 32</a></li>
+<li><a href="Dragon-Ball-ep31">ตอนที่ 31</a></li>
+<li><a href="Dragon-Ball-ep30">ตอนที่ 30</a></li>
+<li><a href="Dragon-Ball-ep29">ตอนที่ 29</a></li>
+<li><a href="Dragon-Ball-ep28">ตอนที่ 28</a></li>
+<li><a href="Dragon-Ball-ep27">ตอนที่ 27</a></li>
+<li><a href="Dragon-Ball-ep26">ตอนที่ 26</a></li>
+<li><a href="Dragon-Ball-ep25">ตอนที่ 25</a></li>
+<li><a href="Dragon-Ball-ep24">ตอนที่ 24</a></li>
+<li><a href="Dragon-Ball-ep23">ตอนที่ 23</a></li>
+<li><a href="Dragon-Ball-ep22">ตอนที่ 22</a></li>
+<li><a href="Dragon-Ball-ep21">ตอนที่ 21</a></li>
+<li><a href="Dragon-Ball-ep20">ตอนที่ 20</a></li>
+<li><a href="Dragon-Ball-ep19">ตอนที่ 19</a></li>
+<li><a href="Dragon-Ball-ep18">ตอนที่ 18</a></li>
+<li><a href="Dragon-Ball-ep17">ตอนที่ 17</a></li>
+<li><a href="Dragon-Ball-ep16">ตอนที่ 16</a></li>
+<li><a href="Dragon-Ball-ep15">ตอนที่ 15</a></li>
+<li><a href="Dragon-Ball-ep14">ตอนที่ 14</a></li>
+<li><a href="Dragon-Ball-ep13">ตอนที่ 13</a></li>
+<li><a href="Dragon-Ball-ep12">ตอนที่ 12</a></li>
+<li><a href="Dragon-Ball-ep11">ตอนที่ 11</a></li>
+<li><a href="Dragon-Ball-ep10">ตอนที่ 10</a></li>
+<li><a href="Dragon-Ball-ep9">ตอนที่ 9</a></li>
+<li><a href="Dragon-Ball-ep8">ตอนที่ 8</a></li>
+<li><a href="Dragon-Ball-ep7">ตอนที่ 7</a></li>
+<li><a href="Dragon-Ball-ep6">ตอนที่ 6</a></li>
+<li><a href="Dragon-Ball-ep5">ตอนที่ 5</a></li>
+<li><a href="Dragon-Ball-ep4">ตอนที่ 4</a></li>
+<li><a href="Dragon-Ball-ep3">ตอนที่ 3</a></li>
+<li><a href="Dragon-Ball-ep2">ตอนที่ 2</a></li>
+<li><a href="Dragon-Ball-ep1">ตอนที่ 1</a></li>
+
+
+
+    
+  </ul>
+</div>
+
+<footer>
+  © 2025 ANIME BK — ดูอนิเมะออนไลน์ อนิเมะ BK พากย์ไทย ซับไทย ครบทุกแนว
+</footer>
+
+<script>
+  const menuToggle = document.getElementById('menuToggle');
+  const navMenu = document.getElementById('navMenu');
+  menuToggle.addEventListener('click', () => navMenu.classList.toggle('active'));
+  menuToggle.addEventListener('keydown', (e) => {
+    if(e.key === 'Enter' || e.key === ' ') {
+      e.preventDefault();
+      navMenu.classList.toggle('active');
+    }
+  });
+</script>
+
+<!-- Histats.com START -->
+<style>
+#histats_wrapper, #histatsC, #histats_counter {
+  display: none !important;
+  visibility: hidden;
+  height: 0;
+  overflow: hidden;
+}
+</style>
+<div id="histats_wrapper">
+  <div id="histats_counter"></div>
+</div>
+<script type="text/javascript">
+  var _Hasync = _Hasync || [];
+  _Hasync.push(['Histats.startgif', '1,4944258,4,10047,""']);
+  _Hasync.push(['Histats.fasi', '1']);
+  _Hasync.push(['Histats.track_hits', '']);
+  (function () {
+    var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+    hs.src = ('//s10.histats.com/js15_gif_as.js');
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+  })();
+</script>
+<noscript>
+  <div id="histats_wrapper">
+    <a href="/" target="_blank"><div id="histatsC">
+      <img border="0" src="//s4is.histats.com/stats/i/4944258.gif?4944258&103">
+    </div></a>
+  </div>
+</noscript>
+<!-- Histats.com END -->
+
+</body>
+      </html>
