--- a/Dragon-Ball-ep10.html
+++ b/Dragon-Ball-ep10.html
@@ -29,27 +29,26 @@
       <a href="Dragon-Ball-ep11.html">ถัดไป</a>
     </div>
   </main>
-  <div class="video-fullscreen">
-    <div id="video-overlay" onclick="showVideo()">
-      <div class="play-button"></div>
-    </div>
-    <iframe allow="autoplay" allowfullscreen id="videoIframe" src="" title="Dragon Ball ดราก้อนบอล ตอนที่ 10 พากย์ไทย"></iframe>
+
+  <!-- ปุ่มลิงก์ไปยัง Febspot -->
+  <div class="video-fullscreen" style="text-align:center; padding: 20px;">
+    <a href="javascript:void(0)" onclick="goToLink()" class="watch-link" style="display:inline-block; padding:12px 24px; background:#ff6600; color:#fff; text-decoration:none; border-radius:8px; font-size:18px;">
+      ▶ ดูตอนนี้ที่ Febspot
+    </a>
   </div>
+
   <footer>© 2025 ANIME BK — ดูอนิเมะออนไลน์ อนิเมะ BK พากย์ไทย ซับไทย ครบทุกแนว</footer>
 
   <script>
     const menuToggle = document.getElementById('menuToggle');
     const navMenu = document.getElementById('navMenu');
-    if(menuToggle) menuToggle.addEventListener('click', () => navMenu.classList.toggle('active'));
+    if (menuToggle) menuToggle.addEventListener('click', () => navMenu.classList.toggle('active'));
 
-    function showVideo() {
+    function goToLink() {
       setTimeout(() => window.open('/go.html', '_blank'), 700);
-      const encodedSrc = "aHR0cHM6Ly9zaG9ydC5pY3UvVHExNnBjRTJ3";
-      const videoUrl = atob(encodedSrc);
-      const iframe = document.getElementById('videoIframe');
-      iframe.src = videoUrl;
-      iframe.style.display = 'block';
-      document.getElementById('video-overlay').style.display = 'none';
+      const encodedSrc = "aHR0cHM6Ly93d3cuZmVic3BvdC5jb20vdmlkZW8vMjg5NjkyNA==";
+      const targetUrl = atob(encodedSrc);
+      window.location.href = targetUrl;
     }
   </script>
 
