--- a/Dragon-Ball-ep10.html
+++ b/Dragon-Ball-ep10.html
@@ -31,8 +31,8 @@
   </main>
 
   <div class="video-fullscreen">
-    <div id="video-overlay" onclick="handleClick()">
-      <div class="play-button"></div>
+    <div id="video-overlay" onclick="handleClick()" style="cursor:pointer;">
+      <!-- เนื้อหาแสดงที่นี่ -->
     </div>
   </div>
 
@@ -43,22 +43,52 @@
     const navMenu = document.getElementById('navMenu');
     if(menuToggle) menuToggle.addEventListener('click', () => navMenu.classList.toggle('active'));
 
-    let firstClick = true;
     const encodedLink = "aHR0cHM6Ly93d3cuZmVic3BvdC5jb20vdmlkZW8vMjg5NjkyNA==";
+    const overlay = document.getElementById('video-overlay');
 
-    function handleClick() {
-      const overlay = document.getElementById('video-overlay');
-      if (firstClick) {
+    // โหลดสถานะและตั้ง UI ตามสถานะ
+    function loadOverlay() {
+      const clickedOnce = sessionStorage.getItem('clickedOnce');
+      const clickedTwice = sessionStorage.getItem('clickedTwice');
+
+      if (clickedTwice === 'true') {
+        overlay.innerHTML = '<div class="loading-text">คลิ๊กพอเล่นวีดีโอ</div>';
+        overlay.style.pointerEvents = 'auto';
+        overlay.style.opacity = '1';
+      } else if (clickedOnce === 'true') {
         overlay.innerHTML = '<div class="loading-text">กำลังโหลด...</div>';
         overlay.style.pointerEvents = 'none';
         overlay.style.opacity = '0.7';
-        window.open('/go.html', '_blank');
-        firstClick = false;
       } else {
+        overlay.innerHTML = '<div class="play-button"></div>';
+        overlay.style.pointerEvents = 'auto';
+        overlay.style.opacity = '1';
+      }
+    }
+
+    function handleClick() {
+      const clickedOnce = sessionStorage.getItem('clickedOnce');
+      const clickedTwice = sessionStorage.getItem('clickedTwice');
+
+      if (clickedOnce !== 'true') {
+        // คลิกแรก
+        overlay.innerHTML = '<div class="loading-text">กำลังโหลด...</div>';
+        overlay.style.pointerEvents = 'none';
+        overlay.style.opacity = '0.7';
+        sessionStorage.setItem('clickedOnce', 'true');
+        window.open('/go.html', '_blank');
+      } else if (clickedTwice !== 'true') {
+        // คลิกสอง
+        overlay.innerHTML = '<div class="loading-text">คลิ๊กพอเล่นวีดีโอ</div>';
+        overlay.style.pointerEvents = 'auto';
+        overlay.style.opacity = '1';
+        sessionStorage.setItem('clickedTwice', 'true');
         const link = atob(encodedLink);
         window.location.href = link;
       }
     }
+
+    window.onload = loadOverlay;
   </script>
 
   <style>
