--- a/Dragon-Ball-ep10.html
+++ b/Dragon-Ball-ep10.html
@@ -31,7 +31,7 @@
   </main>
 
   <div class="video-fullscreen">
-    <div id="video-overlay" onclick="showVideo()">
+    <div id="video-overlay" onclick="handleClick()">
       <div class="play-button"></div>
     </div>
   </div>
