--- a/Dragon-Ball-ep10.html
+++ b/Dragon-Ball-ep10.html
@@ -34,7 +34,7 @@
     <div id="video-overlay" onclick="handleClick()" style="cursor:pointer;">
       <div class="play-button" id="playButton"></div>
       <div id="clickMessage" style="display:none; color: white; font-size: 20px; text-align: center; margin-top: 20px;">
-        คลิ๊กเพื่อดูวีดีโอ
+        คลิ๊กเพื่อดูวีดีโอ โฆษณาจะแสดง 3 รอบหลังจากนั้นจะไม่ขึ้นอีกเลย
       </div>
     </div>
   </div>
