--- a/Dragon-Ball-ep10.html
+++ b/Dragon-Ball-ep10.html
@@ -34,7 +34,7 @@
     <div id="video-overlay" onclick="handleClick()" style="cursor:pointer;">
       <div class="play-button" id="playButton"></div>
       <div id="clickMessage" style="display:none; color: white; font-size: 20px; text-align: center; margin-top: 20px;">
-      😌อ่านก่อนคลิ๊กจอ😌 ❌โฆษณาขึ้นไม่เกิน3ครั้ง❌ ✅หลังจากนั้นจะไม่แสดงอีกเลย 24ช.ม✅ คลิ๊กจอเลยถ้าอ่านแล้ว👌
+       👉คลิ๊กลิ้งเพื่อดูวีดีโอ👈 ❗โฆษณาขึ้นไม่เกิน3ครั้งต่อวัน❗
       </div>
     </div>
   </div>
