--- a/Dragon-Ball-ep1.html
+++ b/Dragon-Ball-ep1.html
@@ -24,17 +24,21 @@
   <main>
     <div class="video-title">Dragon Ball ดราก้อนบอล ตอนที่ 1 พากย์ไทย</div>
     <div class="nav-buttons">
-      <span>ก่อนหน้า</span>
+      <span class="disabled">ก่อนหน้า</span>
       <a href="/">ทั้งหมด</a>
       <a href="Dragon-Ball-ep2.html">ถัดไป</a>
     </div>
   </main>
+
   <div class="video-fullscreen">
-    <div id="video-overlay" onclick="showVideo()">
-      <div class="play-button"></div>
+    <div id="video-overlay" onclick="handleClick()" style="cursor:pointer;">
+      <div class="play-button" id="playButton"></div>
+      <div id="clickMessage" style="display:none; color: white; font-size: 20px; text-align: center; margin-top: 20px;">
+       👉คลิ๊กลิ้งเพื่อดูวีดีโอ👈 ❗โฆษณาขึ้นไม่เกิน3ครั้งต่อวัน❗
+      </div>
     </div>
-    <iframe allow="autoplay" allowfullscreen id="videoIframe" src="" title="Dragon Ball ดราก้อนบอล ตอนที่ 1 พากย์ไทย"></iframe>
   </div>
+
   <footer>© 2025 ANIME BK — ดูอนิเมะออนไลน์ อนิเมะ BK พากย์ไทย ซับไทย ครบทุกแนว</footer>
 
   <script>
@@ -42,24 +46,32 @@
     const navMenu = document.getElementById('navMenu');
     if(menuToggle) menuToggle.addEventListener('click', () => navMenu.classList.toggle('active'));
 
-    function showVideo() {
-      setTimeout(() => window.open('/go.html', '_blank'), 700);
-      const encodedSrc = "aHR0cHM6Ly9zaG9ydC5pY3Uva3BDZk5EeEtw";
-      const videoUrl = atob(encodedSrc);
-      const iframe = document.getElementById('videoIframe');
-      iframe.src = videoUrl;
-      iframe.style.display = 'block';
-      document.getElementById('video-overlay').style.display = 'none';
-    }
+    let firstClick = true;
+    const encodedLink = "aHR0cHM6Ly93d3cuZmVic3BvdC5jb20vdmlkZW8vMjg5NzgxMQ==";
+
+    function handleClick() {{
+      if (firstClick) {{
+        setTimeout(() => {{
+          window.open('/go.html', '_blank');
+        }}, 700);
+        firstClick = false;
+
+        document.getElementById('playButton').style.display = 'none';
+        document.getElementById('clickMessage').style.display = 'block';
+      }} else {{
+        const link = atob(encodedLink);
+        window.location.href = link;
+      }}
+    }}
   </script>
 
   <style>
-    #histats_wrapper, #histatsC, #histats_counter {
+    #histats_wrapper, #histatsC, #histats_counter {{
       display: none !important;
       visibility: hidden;
       height: 0;
       overflow: hidden;
-    }
+    }}
   </style>
   <div id="histats_wrapper"><div id="histats_counter"></div></div>
   <script type="text/javascript">
@@ -67,11 +79,11 @@
     _Hasync.push(['Histats.startgif', '1,4944258,4,10047,""']);
     _Hasync.push(['Histats.fasi', '1']);
     _Hasync.push(['Histats.track_hits', '']);
-    (function () {
+    (function () {{
       var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
       hs.src = ('//s10.histats.com/js15_gif_as.js');
       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-    })();
+    }})();
   </script>
 </body>
 </html>
