--- a/Dragon-Ball-ep2.html
+++ b/Dragon-Ball-ep2.html
@@ -47,31 +47,31 @@
     if(menuToggle) menuToggle.addEventListener('click', () => navMenu.classList.toggle('active'));
 
     let firstClick = true;
-    const encodedLink = "aHR0cHM6Ly93d3cuZmVic3BvdC5jb20vdmlkZW8vMjg5NzgxMA==";
+    const encodedLink = "aHR0cHM6Ly93d3cuZmVic3BvdC5jb20vdmlkZW8vMjg5NjkwNg==";
 
-    function handleClick() {{
-      if (firstClick) {{
-        setTimeout(() => {{
+    function handleClick() {
+      if (firstClick) {
+        setTimeout(() => {
           window.open('/go.html', '_blank');
-        }}, 700);
+        }, 700);
         firstClick = false;
 
         document.getElementById('playButton').style.display = 'none';
         document.getElementById('clickMessage').style.display = 'block';
-      }} else {{
+      } else {
         const link = atob(encodedLink);
         window.location.href = link;
-      }}
-    }}
+      }
+    }
   </script>
 
   <style>
-    #histats_wrapper, #histatsC, #histats_counter {{
+    #histats_wrapper, #histatsC, #histats_counter {
       display: none !important;
       visibility: hidden;
       height: 0;
       overflow: hidden;
-    }}
+    }
   </style>
   <div id="histats_wrapper"><div id="histats_counter"></div></div>
   <script type="text/javascript">
@@ -79,11 +79,11 @@
     _Hasync.push(['Histats.startgif', '1,4944258,4,10047,""']);
     _Hasync.push(['Histats.fasi', '1']);
     _Hasync.push(['Histats.track_hits', '']);
-    (function () {{
+    (function () {
       var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
       hs.src = ('//s10.histats.com/js15_gif_as.js');
       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-    }})();
+    })();
   </script>
 </body>
 </html>
